--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
@@ -22,7 +22,7 @@
 @using (Html.BeginForm("Modificar", "Empleado", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdPersona);
-    @Html.HiddenFor(q => q.info_persona.IdPersona);
+    @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdEmpleado);
    
     <div class="row">
@@ -44,8 +44,8 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdTipoDocumento">Tipo documento*</label>
-                    @Html.DropDownListFor(q => q.info_persona.IdTipoDocumento, new SelectList(ViewBag.lst_tipo_docu, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.info_persona.IdTipoDocumento, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(q => q.IdTipoDocumento, new SelectList(ViewBag.lst_tipo_docu, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdTipoDocumento, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-3">
@@ -58,7 +58,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="pe_cedulaRuc">Número documento*</label>
-                    @Html.TextBoxFor(q => q.info_persona.pe_cedulaRuc, new { @class = "form-control" })
+                    @Html.TextBoxFor(q => q.pe_cedulaRuc, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.pe_cedulaRuc, "", new { @class = "text-danger", @id = "pe_cedulaRuc" })
                 </div>
             </div>
@@ -71,16 +71,16 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="pe_apellido">Apellidos*</label>
-                    @Html.TextBoxFor(q => q.info_persona.pe_apellido, new { @class = "form-control", @id = "pe_apellido" })
-                    @Html.ValidationMessageFor(q => q.info_persona.pe_apellido, "", new { @class = "text-danger" })
+                    @Html.TextBoxFor(q => q.pe_apellido, new { @class = "form-control", @id = "pe_apellido" })
+                    @Html.ValidationMessageFor(q => q.pe_apellido, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="pe_nombre">Nombres*</label>
-                    @Html.TextBoxFor(q => q.info_persona.pe_nombre, new { @class = "form-control", @id = "pe_nombre" })
-                    @Html.ValidationMessageFor(q => q.info_persona.pe_nombre, "", new { @class = "text-danger" })
+                    @Html.TextBoxFor(q => q.pe_nombre, new { @class = "form-control", @id = "pe_nombre" })
+                    @Html.ValidationMessageFor(q => q.pe_nombre, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -138,8 +138,8 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             <label for="pe_direccion">Dirección*</label>
-                            @Html.TextBoxFor(q => q.info_persona.pe_direccion, new { @class = "form-control", @rows = "2" })
-                            @Html.ValidationMessageFor(q => q.info_persona.pe_direccion, "", new { @class = "text-danger" })
+                            @Html.TextBoxFor(q => q.pe_direccion, new { @class = "form-control", @rows = "2" })
+                            @Html.ValidationMessageFor(q => q.pe_direccion, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
@@ -147,8 +147,8 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             <label for="pe_correo">Correo*</label>
-                            @Html.TextBoxFor(q => q.info_persona.pe_correo, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.info_persona.pe_correo, "", new { @class = "text-danger" })
+                            @Html.TextBoxFor(q => q.pe_correo, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.pe_correo, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
@@ -156,15 +156,15 @@
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="pe_sexo">Sexo*</label>
-                            @Html.DropDownListFor(q => q.info_persona.pe_sexo, new SelectList(ViewBag.lst_sexo, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.info_persona.pe_sexo, "", new { @class = "text-danger" })
+                            @Html.DropDownListFor(q => q.pe_sexo, new SelectList(ViewBag.lst_sexo, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.pe_sexo, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="IdEstadoCivil">Estado civil*</label>
-                            @Html.DropDownListFor(q => q.info_persona.IdEstadoCivil, new SelectList(ViewBag.lst_estado_civil, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.info_persona.IdEstadoCivil, "", new { @class = "text-danger" })
+                            @Html.DropDownListFor(q => q.IdEstadoCivil, new SelectList(ViewBag.lst_estado_civil, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.IdEstadoCivil, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -174,16 +174,16 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.DevExpress().DateEditFor(q=> q.info_persona.pe_fechaNacimiento, settings =>
+                                @Html.DevExpress().DateEditFor(q=> q.pe_fechaNacimiento, settings =>
                             {
-                                settings.Name = "info_persona.pe_fechaNacimiento";
+                                settings.Name = "pe_fechaNacimiento";
                                 settings.Properties.UseMaskBehavior = true;
                                 settings.Properties.EditFormat = EditFormat.Date;
                                 settings.Properties.EditFormatString = "dd/MM/yyyy";
                                 settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                                 settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                             }).GetHtml()
-                                @Html.ValidationMessageFor(q => q.info_persona.pe_fechaNacimiento, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.pe_fechaNacimiento, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
@@ -192,16 +192,16 @@
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="pe_telfono_Contacto">Teléfono contacto*</label>
-                            @Html.TextBoxFor(q => q.info_persona.pe_telfono_Contacto, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.info_persona.pe_telfono_Contacto, "", new { @class = "text-danger" })
+                            @Html.TextBoxFor(q => q.pe_telfono_Contacto, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.pe_telfono_Contacto, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="pe_celular">Celular*</label>
-                            @Html.TextBoxFor(q => q.info_persona.pe_celular, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.info_persona.pe_celular, "", new { @class = "text-danger" })
+                            @Html.TextBoxFor(q => q.pe_celular, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.pe_celular, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -492,8 +492,13 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="Marca_Biometrico">Marca Biometrico</label>
-                            @Html.EditorFor(q => q.Marca_Biometrico, new { @class = "form-control" })
+                            <label for="Marca_Biometrico"></label>
+                            @Html.DevExpress().CheckBoxFor(q => q.Marca_Biometrico, settings =>
+                            {
+                                settings.Name = "Marca_Biometrico";
+                                settings.Text = "Marca biometrico";
+
+                            }).GetHtml()
                             @Html.ValidationMessageFor(q => q.Marca_Biometrico, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -503,14 +508,34 @@
 
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="es_AcreditaHorasExtras">Goza horas extras</label>
-                            @Html.EditorFor(q => q.es_AcreditaHorasExtras, new { @class = "form-control" })
+                            <label for="es_AcreditaHorasExtras"></label>
+                            @Html.DevExpress().CheckBoxFor(q => q.es_AcreditaHorasExtras, settings =>
+                           {
+                               settings.Name = "es_AcreditaHorasExtras";
+                               settings.Text = "Goza horas extras";
+
+                           }).GetHtml()
                             @Html.ValidationMessageFor(q => q.es_AcreditaHorasExtras, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                 </div>
+                <div class="row">
 
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="es_AcreditaHorasExtras"></label>
+                            @Html.DevExpress().CheckBoxFor(q => q.Tiene_ingresos_compartidos, settings =>
+                           {
+                               settings.Name = "Tiene_ingresos_compartidos";
+                               settings.Text = "Tiene ingresos compartidos";
+
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.Tiene_ingresos_compartidos, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                </div>
 
 
             </div>
