--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -21,6 +21,9 @@
 
 @using (Html.BeginForm("Nuevo", "Empleado", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdPersona);
+    @Html.HiddenFor(q => q.IdEmpresa);
+    @Html.HiddenFor(q => q.IdEmpleado);
     <div class="row">
         <div class="col-md-12">
             @*<div class="col-md-2" height = "100"  width = "100"  style = "border:solid">
@@ -39,9 +42,9 @@
             </div>
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="info_persona.IdTipoDocumento">Tipo documento*</label>
-                    @Html.DropDownListFor(q => q.info_persona.IdTipoDocumento, new SelectList(ViewBag.lst_tipo_docu, "CodCatalogo", "ca_descripcion"), new { @class = "form-control", @id = "IdTipoDocumento" })
-                    @Html.ValidationMessageFor(q => q.info_persona.IdTipoDocumento, "", new { @class = "text-danger" })
+                    <label for="IdTipoDocumento">Tipo documento*</label>
+                    @Html.DropDownListFor(q => q.IdTipoDocumento, new SelectList(ViewBag.lst_tipo_docu, "CodCatalogo", "ca_descripcion"), new { @class = "form-control", @id = "IdTipoDocumento" })
+                    @Html.ValidationMessageFor(q => q.IdTipoDocumento, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-3">
@@ -53,9 +56,9 @@
             </div>
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="info_persona.pe_cedulaRuc">Número documento*</label>
-                    @Html.TextBoxFor(q => q.info_persona.pe_cedulaRuc, new { @class = "form-control", @id = "pe_cedulaRuc" })
-                    @Html.ValidationMessageFor(q => q.info_persona.pe_cedulaRuc, "", new { @class = "text-danger" })
+                    <label for="pe_cedulaRuc">Número documento*</label>
+                    @Html.TextBoxFor(q => q.pe_cedulaRuc, new { @class = "form-control", @id = "pe_cedulaRuc" })
+                    @Html.ValidationMessageFor(q => q.pe_cedulaRuc, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -66,17 +69,17 @@
 
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="info_persona.pe_apellido">Apellidos*</label>
-                    @Html.TextBoxFor(q => q.info_persona.pe_apellido, new { @class = "form-control", @id = "pe_apellido" })
-                    @Html.ValidationMessageFor(q => q.info_persona.pe_apellido, "", new { @class = "text-danger" })
+                    <label for="pe_apellido">Apellidos*</label>
+                    @Html.TextBoxFor(q => q.pe_apellido, new { @class = "form-control", @id = "pe_apellido" })
+                    @Html.ValidationMessageFor(q => q.pe_apellido, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="info_persona.pe_nombre">Nombres*</label>
-                    @Html.TextBoxFor(q => q.info_persona.pe_nombre, new { @class = "form-control", @id = "pe_nombre" })
-                    @Html.ValidationMessageFor(q => q.info_persona.pe_nombre, "", new { @class = "text-danger" })
+                    <label for="pe_nombre">Nombres*</label>
+                    @Html.TextBoxFor(q => q.pe_nombre, new { @class = "form-control", @id = "pe_nombre" })
+                    @Html.ValidationMessageFor(q => q.pe_nombre, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -133,53 +136,53 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label for="info_persona.pe_direccion">Dirección*</label>
-                            @Html.TextBoxFor(q => q.info_persona.pe_direccion, new { @class = "form-control", @rows = "2" })
-                            @Html.ValidationMessageFor(q => q.info_persona.pe_direccion, "", new { @class = "text-danger" })
+                            <label for="pe_direccion">Dirección*</label>
+                            @Html.TextBoxFor(q => q.pe_direccion, new { @class = "form-control", @rows = "2" })
+                            @Html.ValidationMessageFor(q => q.pe_direccion, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label for="info_persona.pe_correo">Correo*</label>
-                            @Html.TextBoxFor(q => q.info_persona.pe_correo, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.info_persona.pe_correo, "", new { @class = "text-danger" })
+                            <label for="pe_correo">Correo*</label>
+                            @Html.TextBoxFor(q => q.pe_correo, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.pe_correo, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="info_persona.pe_sexo">Sexo*</label>
-                            @Html.DropDownListFor(q => q.info_persona.pe_sexo, new SelectList(ViewBag.lst_sexo, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.info_persona.pe_sexo, "", new { @class = "text-danger" })
+                            <label for="pe_sexo">Sexo*</label>
+                            @Html.DropDownListFor(q => q.pe_sexo, new SelectList(ViewBag.lst_sexo, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.pe_sexo, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="info_persona.IdEstadoCivil">Estado civil*</label>
-                            @Html.DropDownListFor(q => q.info_persona.IdEstadoCivil, new SelectList(ViewBag.lst_estado_civil, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.info_persona.IdEstadoCivil, "", new { @class = "text-danger" })
+                            <label for="IdEstadoCivil">Estado civil*</label>
+                            @Html.DropDownListFor(q => q.IdEstadoCivil, new SelectList(ViewBag.lst_estado_civil, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.IdEstadoCivil, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="info_persona.pe_fechaNacimiento">Fecha de nacimiento*</label>
+                            <label for="pe_fechaNacimiento">Fecha de nacimiento*</label>
                             <div class="input-group date">
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.DevExpress().DateEditFor(q => q.info_persona.pe_fechaNacimiento, settings =>
+                                @Html.DevExpress().DateEditFor(q => q.pe_fechaNacimiento, settings =>
                            {
-                               settings.Name = "info_persona.pe_fechaNacimiento";
+                               settings.Name = "pe_fechaNacimiento";
                                settings.Properties.UseMaskBehavior = true;
                                settings.Properties.EditFormat = EditFormat.Date;
                                settings.Properties.EditFormatString = "dd/MM/yyyy";
                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                            }).GetHtml()
-                                @Html.ValidationMessageFor(q => q.info_persona.pe_fechaNacimiento, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.pe_fechaNacimiento, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
@@ -187,17 +190,17 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="info_persona.pe_telfono_Contacto">Teléfono contacto*</label>
-                            @Html.TextBoxFor(q => q.info_persona.pe_telfono_Contacto, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.info_persona.pe_telfono_Contacto, "", new { @class = "text-danger" })
+                            <label for="pe_telfono_Contacto">Teléfono contacto*</label>
+                            @Html.TextBoxFor(q => q.pe_telfono_Contacto, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.pe_telfono_Contacto, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="info_persona.pe_celular">Celular*</label>
-                            @Html.TextBoxFor(q => q.info_persona.pe_celular, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.info_persona.pe_celular, "", new { @class = "text-danger" })
+                            <label for="pe_celular">Celular*</label>
+                            @Html.TextBoxFor(q => q.pe_celular, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.pe_celular, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -505,7 +508,7 @@
 
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="es_AcreditaHorasExtras">Goza horas extras</label>
+                            <label for="es_AcreditaHorasExtras"></label>
                             @Html.DevExpress().CheckBoxFor(q => q.es_AcreditaHorasExtras, settings =>
                            {
                                settings.Name = "es_AcreditaHorasExtras";
@@ -513,6 +516,22 @@
 
                            }).GetHtml()
                             @Html.ValidationMessageFor(q => q.es_AcreditaHorasExtras, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row">
+
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="es_AcreditaHorasExtras"></label>
+                            @Html.DevExpress().CheckBoxFor(q => q.Tiene_ingresos_compartidos, settings =>
+                           {
+                               settings.Name = "Tiene_ingresos_compartidos";
+                               settings.Text = "Tiene ingresos compartidos";
+
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.Tiene_ingresos_compartidos, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -683,7 +702,7 @@
             </div>
 
 
-                </div>
+        </div>
     </div>
 
     <div class="box-footer">
