--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_GridViewPartial_empleado_novedad_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_GridViewPartial_empleado_novedad_det.cshtml
@@ -35,6 +35,11 @@
 
         //Funcion para inicializar fila al presionar nuevo
 
+        settings.InitNewRow = (s, e) =>
+        {
+            e.NewValues["FechaPago"] = DateTime.Now;
+           
+        };
 
         settings.Columns.Add(column =>
         {
