--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/Nuevo.cshtml
@@ -6,15 +6,23 @@
     {
         Response.Redirect("~/Account/Login");
     }
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Nuevo", "ProyeccionDeGastos", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdTransaccionSession) 
-      
-     <div class="row">
+    @Html.HiddenFor(q => q.IdTransaccionSession)
+
+    <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
